# inside_drones

./: README.md
my_rtab_bringup/: package.xml  setup.cfg  setup.py
my_rtab_bringup/launch/: camera_only.launch.py  localization.launch.py  mapping.launch.py  play_rosbag_localization.launch.py  record_rosbag.launch.py
my_rtab_bringup/rviz/: camera_view.rviz  localization_view.rviz  mapping_view.rviz
